# pulp-example-plugins

./: CMakeLists.txt  README.md  effect_editors.hpp  ink_signal_editor.hpp  test_editors.cpp
gain/: CMakeLists.txt  README.md  clap_entry.cpp  gain.hpp  gain_editor.hpp  test_gain.cpp  vst3_entry.cpp
gui-zoo/: CMakeLists.txt  README.md  gui_zoo.hpp  test_gui_zoo.cpp
midi-inspector/: CMakeLists.txt  README.md  clap_entry.cpp  midi_inspector.hpp  midi_inspector_editor.hpp  test_midi_inspector.cpp
midi-transpose/: CMakeLists.txt  README.md  clap_entry.cpp  midi_transpose.hpp  midi_transpose_editor.hpp  test_midi_transpose.cpp
mono-synth/: CMakeLists.txt  README.md  clap_entry.cpp  mono_synth.hpp  mono_synth_editor.hpp  test_mono_synth.cpp
mpe-spreader/: CMakeLists.txt  README.md  clap_entry.cpp  mpe_spreader.hpp  mpe_spreader_editor.hpp  test_mpe_spreader.cpp
state-memo/: CMakeLists.txt  README.md  clap_entry.cpp  state_memo.hpp  state_memo_editor.hpp  test_state_memo.cpp  vst3_entry.cpp
synth-with-presets/: CMakeLists.txt  README.md  clap_entry.cpp  synth_with_presets.hpp  synth_with_presets_editor.hpp  test_synth_with_presets.cpp
sysex-echo/: CMakeLists.txt  README.md  clap_entry.cpp  sysex_echo.hpp  sysex_echo_editor.hpp  test_sysex_echo.cpp
